--- a/1/prometheus.yml
+++ b/1/prometheus.yml
@@ -9,7 +9,7 @@ scrape_configs:
 
   - job_name: 'wordpress'
     static_configs:
-      - targets: ['exporter-wordpress:11011']
+      - targets: ['exporter-wordpress:9850']
     metrics_path: /metrics
 
   - job_name: 'nginx'
@@ -21,3 +21,18 @@ scrape_configs:
     static_configs:
       - targets: ['exporter-mysql:9104']
     metrics_path: /metrics
+
+  - job_name: 'blackbox'
+    metrics_path: /probe
+    params:
+      module: [http_2xx]
+    static_configs:
+      - targets:
+        - http://nginx:8080
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: 192.168.0.110:9115
