--- a/2/alertmanager.yml
+++ b/2/alertmanager.yml
@@ -4,10 +4,36 @@ global:
 route:
   group_by: ['alertname', 'severity']
   repeat_interval: 1h
-  receiver: 'telegram'
+  group_wait: 30s
+  group_interval: 5m
+  receiver: 'default'
+
+  routes:
+    - match:
+        severity: 'critical'
+      receiver: 'critical'
+
+    - match:
+        severity: 'warning'
+      receiver: 'warning'
+
+    - match:
+      receiver: 'default'
 
 receivers:
-  - name: 'telegram'
+  - name: 'critical'
+    telegram_configs:
+      - chat_id: 2130189693
+        parse_mode: 'HTML'
+        bot_token: '5805976749:AAEvztRdbyAzW55vwQpd7AhiziqKto6OMmk'
+
+  - name: 'warning'
+    telegram_configs:
+      - chat_id: 2130189693
+        parse_mode: 'HTML'
+        bot_token: '5805976749:AAEvztRdbyAzW55vwQpd7AhiziqKto6OMmk'
+
+  - name: 'default'
     telegram_configs:
       - chat_id: 2130189693
         parse_mode: 'HTML'
