--- a/https_autorization/nginx.conf
+++ b/https_autorization/nginx.conf
@@ -1,39 +1,88 @@
 worker_processes 1;
 
-events {
-  worker_connections 1024;
-}
+events { worker_connections 1024; }
 
 http {
-    server {
-        listen 80;
-        server_name server.ru; #указать реальный адрес
-	    return 301 https://$host$request_uri;
-    }
-    server {
-        listen 443 ssl;
-        server_name server.ru; #указать реальный адрес
 
-        ssl_certificate /etc/nginx/certs/fullchain.pem;
-        ssl_certificate_key /etc/nginx/certs/privkey.pem;
+    sendfile on;
+
+    upstream docker-prom {
+        server prometheus:9090;
+    }
+
+    upstream docker-alert {
+        server alertmanager:9093;
+    }
+
+    upstream docker-base {
+        server victoria_metrics:8428;
+    }
+
+    server {
+        listen 9090 ssl;
+        ssl_certificate /etc/nginx/certs/server.pem;
+        ssl_certificate_key /etc/nginx/certs/server.key;
 
         location / {
-            proxy_pass http://grafana:3000;
-            proxy_set_header Host $host;
+            proxy_pass         http://docker-prom;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+    }
+
+    server {
+        listen 9093 ssl;
+        ssl_certificate /etc/nginx/certs/server.pem;
+        ssl_certificate_key /etc/nginx/certs/server.key;
+
+        location / {
+            proxy_pass         http://docker-alert;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+    }
+
+    server {
+        listen 8428 ssl;
+        ssl_certificate /etc/nginx/certs/server.pem;
+        ssl_certificate_key /etc/nginx/certs/server.key;
+
+        location / {
+            proxy_pass         http://docker-base;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+    }
+
+    server {
+        listen 80;
+        server_name server.ru;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl;
+        server_name server.ru;
+
+        ssl_certificate /etc/nginx/certs/server.pem;
+        ssl_certificate_key /etc/nginx/certs/server.key;
+
+        location / {
+            proxy_pass http://grafana:3000/;
+            proxy_redirect     off;
+            proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-#	    location /prom {
-#         proxy_pass http://prometheus:9090;
-#       }
-#
-        location /alert {
-            proxy_pass http://alertmanager:9093;
-        }
-
-        location /base {
-            proxy_pass http://victoria_metrics:8428;
+            proxy_set_header   X-Forwarded-Host $server_name;
         }
     }
 }
