--- a/https_autorization/docker-compose.yaml
+++ b/https_autorization/docker-compose.yaml
@@ -15,6 +15,9 @@ services:
     ports:
       - "443:443"
       - "80:80"
+      - "8428:8428"
+      - "9090:9090"
+      - "9093:9093"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/certs:/etc/nginx/certs:ro
@@ -39,8 +42,8 @@ services:
 
   prometheus:
     image: prom/prometheus:v2.46.0
-    ports:
-      - '9090:9090'
+    expose:
+      - '9090'
     volumes:
       - ./prometheus:/etc/prometheus
     command:
