--- a/1/docker-compose.yml
+++ b/1/docker-compose.yml
@@ -3,8 +3,6 @@ services:
 
   mysql:
     image: mariadb
-    ports:
-      - 3306:3306
     volumes:
       - ./data/mysql:/var/lib/mysql
     environment:
@@ -57,6 +55,8 @@ services:
   exporter-mysql:
     image: bitnami/mysqld-exporter
     depends_on:
+      - mysql
+    links:
       - mysql
     ports:
       - 9104:9104
