--- a/7/configs/filebeat.yml
+++ b/7/configs/filebeat.yml
@@ -1,4 +1,5 @@
 ###################### Filebeat Configuration Example #########################
+
 # This file is an example configuration file highlighting only the most common
 # options. The filebeat.reference.yml file from the same directory contains all the
 # supported options with more comments. You can use it as a reference.
@@ -21,7 +22,7 @@ filebeat.inputs:
 - type: filestream
 
   # Unique ID among all inputs, an ID is required.
-  id: my-filestream-id
+  id: logs
 
   # Change to true to enable this input configuration.
   enabled: true
@@ -30,6 +31,8 @@ filebeat.inputs:
   paths:
     - /var/log/*.log
     #- c:\programdata\elasticsearch\logs\*
+#  fields:
+#    log_type: ssh
 
   # Exclude lines. A list of regular expressions to match. It drops the lines that are
   # matching any regular expression from the list.
@@ -72,7 +75,7 @@ setup.template.settings:
   #index.codec: best_compression
   #_source.enabled: false
 
-
+setup.ilm.overwrite: true
 # ================================== General ===================================
 
 # The name of the shipper that publishes the network data. It can be used to group
@@ -110,7 +113,7 @@ setup.kibana:
   # Scheme and port can be left out and will be set to the default (http and 5601)
   # In case you specify and additional path, the scheme is required: http://localhost:5601/path
   # IPv6 addresses should always be defined as: https://[2001:db8::1]:5601
-  host: "192.168.0.101:5601"
+  host: "192.168.0.105:5601"
   username: "elastic"
   password: "go-+4cnY6cMPopiDx5YA"
   ssl.enabled: false
@@ -169,9 +172,16 @@ output.elasticsearch:
 processors:
   - add_host_metadata:
       when.not.contains.tags: forwarded
-  - add_cloud_metadata: ~
-  - add_docker_metadata: ~
-  - add_kubernetes_metadata: ~
+#  - add_cloud_metadata: ~
+#  - add_docker_metadata: ~
+#  - add_kubernetes_metadata: ~
+#  - drop_event:
+#      when:
+#        not:
+#          contains:
+#            message: "ssh2"
+
+
 
 # ================================== Logging ===================================
 
