--- a/project/my.cnf
+++ b/project/my.cnf
@@ -1,5 +1,9 @@
 [client]
 host = mysql
 port = 3306
-user = user_wp
-password = P@ssw0rd
+user = exporter
+password = exporter
+#skip-host-cache
+#skip-name-resolve
+#skip-networking
+#bind-address=0.0.0.0
