--- a/project/prometheus/prometheus.yml
+++ b/project/prometheus/prometheus.yml
@@ -8,10 +8,10 @@ rule_files:
   - /etc/prometheus/alert.rules.yml
 
 scrape_configs:
-#  - job_name: 'wordpress-exporter'
-#    static_configs:
-#      - targets: ['wordpress-exporter:11011']
-#    metrics_path: /metrics
+  - job_name: 'wordpress-exporter'
+    static_configs:
+      - targets: ['wordpress-exporter:11011']
+    metrics_path: /metrics
 
   - job_name: 'nginx-exporter'
     static_configs:
@@ -20,14 +20,8 @@ scrape_configs:
     
   - job_name: 'mysql-exporter'
     static_configs:
-      - targets: ['mysql-exporter:9104']
-    relabel_configs:
-      - source_labels: [__address__]
-        target_label: __param_target
-      - source_labels: [__param_target]
-        target_label: instance
-      - target_label: __address__
-        replacement: mysql-exporter:9104
+      - targets: ['mysqld-exporter:9104']
+    metrics_path: /metrics
           
   - job_name: 'node-exporter'
     static_configs:
