--- a/ansible/roles/config_vm/tasks/main.yaml
+++ b/ansible/roles/config_vm/tasks/main.yaml
@@ -42,7 +42,7 @@
 
 - name: Запускаем Docker Compose...
   ansible.builtin.shell: |
-    docker compose up -d
+    docker-compose up -d
   args:
     chdir: /opt/observability
   
